--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
 		</dependency>
 		
 		<dependency>
+    		<groupId>org.primefaces</groupId>
+    		<artifactId>primefaces</artifactId>
+    		<version>7.0</version>
+		</dependency>
+		
+		<dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.35</version>
