--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
 		</dependency>
 		
 		<dependency>
+    		<groupId>commons-lang</groupId>
+   			<artifactId>commons-lang</artifactId>
+    		<version>2.6</version>
+		</dependency>
+		
+		<dependency>
 			<groupId>org.hibernate.javax.persistence</groupId>
 			<artifactId>hibernate-jpa-2.0-api</artifactId>
 			<version>1.0.1.Final</version>
